--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,51 @@
 
-.DS_Store
 
 # Gradle files
-.gradle
-/build
+**/.gradle/
+**/build/
 
 # Local configuration file (sdk path, etc)
 local.properties
 
 # IntelliJ
 *.iml
-/.idea/caches
+**/.idea/caches
+**/.idea/modules.xml
 /.idea/libraries
-/.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+
+# Generated files
+**/bin/
+**/gen/
+**/out/
+
+# Built application files
+**/*.apk
+**/*.aar
+**/*.ap_
+**/*.aab
 
 # Android Studio generated files and folders
 /captures
 .externalNativeBuild/
 .cxx/
+
+# Android Studio Navigation editor temp files
+**/.navigation/
+
+# Android Studio captures folder
+**/captures/
+
+# Files for the ART/Dalvik VM
+**/*.dex
+
+# Java class files
+*.class
+
+# Log Files
+**/*.log
+
+# Mac specific
+.DS_Store
